--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Malin's Website</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="index-styles.css" />
+    <script src=""></script>
+	<style>
+    </style>
 
+</head>
 
 	<!--- Code above this line will not be displayed on the browser --> 
 
-	<body>
+<body>
 
-		<p> Hello world! </p>
-        <p> My name is Malin! </p>
+<header>
+	<h1>Malin Phelan</h1>
+</header>
 
-	</body>
+<nav>
+		<a href="index.html">Home</a> |
+		<a href="music.html">Music</a> |
+		<a href="running.html">Running</a> |
+		<a href="travel.html">Travel</a> |
+		<a href="food.html">Food</a> |
+</nav>
 
+<h2>Malin Phelan: About Me</h2>
+
+<main>
+	<h3> A Brief Introduction </h3>
+		<p> I am a student at the University of Wisconsin-Madison, where I am double majoring in History and Information Science.</p>
+		<p> I grew up in New Jersey, but now live in between Chicago, New York City, and Washington, D.C., when I am not at school in Wisconsin. I love getting to experience living in all of these wonderful cities.</p>
+        <p> I have a wide variety of interests, including traveling, attending concerts, running, and trying new restaurants. More information on each of these hobbies of mine is available throughout this website. </p>
+		<p> I have an amazing family and incredible friends.</p>
+
+		<img src="me.jpg" class="center"; alt="a photo of Malin Phelan">
+
+</main>
+
+<h4>The following links lead to pages all about myself and my interests!</h4>
+
+<article><a href="travel.html">Travel</a></article>
+<p>All about my favorite places I've been!</p>
+
+<article><a href="music.html">Music</a></article>
+<p>The musicians I love and the concerts I've been to.</p>
+
+<article><a href="running.html">Running</a></article>
+<p>A page on one of my favorite hobbies.</p>
+
+<article><a href="food.html">Food</a></article>
+<p>My favorite restaurants and cooking!</p>
+
+</body>
 </html>
